--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # 站点信息
 VITE_SITE_TITLE = "Snavigation"
-VITE_SITE_ANTHOR = "無名"
+VITE_SITE_ANTHOR = "WKK"
 VITE_SITE_KEYWORDS = "Snavigation,导航,网站导航,主页,简约导航,起始页,navigation"
 VITE_SITE_DES = "一个简约的起始页，支持自定义搜索引擎，自定义快捷方式，自定义壁纸以及数据备份"
 VITE_SITE_LOGO = "/favicon.png"
 VITE_SITE_APPLE_LOGO = "/logo/logo.png"
-VITE_SITE_COPYRIGHTLINK = "https://github.com/imsyy/Snavigation"
+VITE_SITE_COPYRIGHTLINK = "https://github.com/wkk-dev/Snavigation"
 
 # 进入欢迎词
 VITE_WELCOME_TEXT = "欢迎访问本站"
